# vesshelm

./: .gitignore  .goreleaser.yaml  .goreleaser_hook.sh  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  justfile  package-lock.json
.github/workflows/: ci.yml  release.yml
openspec/: project.md
openspec/changes/add-command/: design.md  proposal.md  tasks.md
openspec/changes/add-config-option/: proposal.md  tasks.md
openspec/changes/add-deploy-summary/: proposal.md  tasks.md
openspec/changes/add-force-deploy-flag/: proposal.md  tasks.md
openspec/changes/add-helm-diff/: design.md  proposal.md  tasks.md
openspec/changes/add-init-command/: proposal.md  tasks.md
openspec/changes/add-local-charts/: design.md  proposal.md  tasks.md
openspec/changes/add-local-charts-support/: design.md  proposal.md  tasks.md
openspec/changes/add-no-deploy-option/: proposal.md  tasks.md
openspec/changes/add-only-flag/: design.md  proposal.md  tasks.md
openspec/changes/add-persistent-progress-bar/: design.md  proposal.md  (+1 more)
src/: config.rs  error.rs  lib.rs  lock.rs  main.rs
src/cli/: mod.rs
src/clients/: artifacthub.rs  git.rs  helm.rs  mod.rs
src/engine/: sync.rs
src/util/: config_updater.rs  dag.rs  encryption.rs  error.rs  filter.rs  helm.rs  interaction.rs  mod.rs  progress.rs  variables.rs
tests/: check_updates.rs  clients_test.rs  config_secrets_test.rs  deploy.rs  fail_check_updates.rs  fail_deploy.rs  fail_sync.rs  more_deploy.rs  more_validate.rs  sops_integration.rs  sync.rs  sync_lock_test.rs  validate.rs
tests/fixtures/: dummy_sops.yaml
(+258 files in other folders)
